@@ -46,10 +46,9 @@ public class WikiLinkTag implements JFlexParserTag {
 	/**
 	 *
 	 */
-	private String buildInternalLinkUrl(ParserInput parserInput, int mode, String raw) {
+	private String buildInternalLinkUrl(ParserInput parserInput, int mode, String raw) throws ParserException {
 		String context = parserInput.getContext();
-		String virtualWiki = parserInput.getVirtualWiki();
-		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(virtualWiki, raw);
+		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(parserInput, raw);
 		if (wikiLink == null) {
 			// invalid link
 			return raw;
@@ -67,6 +66,7 @@ public class WikiLinkTag implements JFlexParserTag {
 				// inter-wiki link
 				return LinkUtil.interWiki(wikiLink);
 			}
+			String virtualWiki = parserInput.getVirtualWiki();
 			if (wikiLink.getVirtualWiki() != null) {
 				// link to another virtual wiki
 				virtualWiki = wikiLink.getVirtualWiki().getName();
@@ -170,9 +170,8 @@ public class WikiLinkTag implements JFlexParserTag {
 	/**
 	 *
 	 */
-	private String processLinkContent(ParserInput parserInput, ParserOutput parserOutput, int mode, String raw) {
-		String virtualWiki = parserInput.getVirtualWiki();
-		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(virtualWiki, raw);
+	private String processLinkContent(ParserInput parserInput, ParserOutput parserOutput, int mode, String raw) throws ParserException {
+		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(parserInput, raw);
 		if (StringUtils.isBlank(wikiLink.getDestination()) && StringUtils.isBlank(wikiLink.getSection())) {
 			// no destination or section
 			return raw;
@@ -184,8 +183,7 @@ public class WikiLinkTag implements JFlexParserTag {
 	 *
 	 */
 	private String processLinkMetadata(ParserInput parserInput, ParserOutput parserOutput, int mode, String raw) throws ParserException {
-		String virtualWiki = parserInput.getVirtualWiki();
-		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(virtualWiki, raw);
+		WikiLink wikiLink = JFlexParserUtil.parseWikiLink(parserInput, raw);
 		if (StringUtils.isBlank(wikiLink.getDestination()) && StringUtils.isBlank(wikiLink.getSection())) {
 			return raw;
 		}
