@@ -21,3 +21,6 @@
 <p><b>WikiLink1</b></p>
 <p><a href="/wiki/test/WikiLink1" title="WikiLink1">WikiLink1</a></p>
 <p><a href="/wiki/test/WikiLink1" title="WikiLink1">WikiLink1</a></p>
+<p><b>WikiLink1</b></p>
+<p><a href="/wiki/en/Special:Edit?topic=Help:WikiLink1" class="edit" title="Help:WikiLink1">Help:WikiLink1</a></p>
+<p><a href="/wiki/en/Special:Edit?topic=Help:WikiLink1" class="edit" title="Help:WikiLink1">Help:WikiLink1</a></p>
